syntax = "proto3";
package openim.sdk.message;
option go_package = "github.com/openimsdk/openim-sdk-core/v3/proto";
option csharp_namespace = "OpenIM";

import "common.proto";

message AtInfo {
  string atUserID = 1;
  string groupNickname = 2;
}

message ImageInfo {
  int32 width = 1;
  int32 height = 2;
  string type = 3;
  int64 size = 4;
}

message PictureBaseInfo {
  string uuid = 1;
  string type = 2;
  int64 size = 3;
  int32 width = 4;
  int32 height = 5;
  string url = 6;
}

message SoundBaseInfo {
  string uuid = 1;
  string soundPath = 2;
  string sourceURL = 3;
  int64 dataSize = 4;
  int64 duration = 5;
  string soundType = 6;
}

message VideoBaseInfo {
  string videoPath = 1;
  string videoUUID = 2;
  string videoURL = 3;
  string videoType = 4;
  int64 videoSize = 5;
  int64 duration = 6;
  string snapshotPath = 7;
  string snapshotUUID = 8;
  int64 snapshotSize = 9;
  string snapshotURL = 10;
  int32 snapshotWidth = 11;
  int32 snapshotHeight = 12;
  string snapshotType = 13;
}

message FileBaseInfo {
  string filePath = 1;
  string uuid = 2;
  string sourceURL = 3;
  string fileName = 4;
  int64 fileSize = 5;
  string fileType = 6;
}

message TextElem {
  string content = 1;
}

message CardElem {
  string userID = 1;
  string nickname = 2;
  string faceURL = 3;
  string ex = 4;
}

message PictureElem {
  string sourcePath = 1;
  PictureBaseInfo sourcePicture = 2;
  PictureBaseInfo bigPicture = 3;
  PictureBaseInfo snapshotPicture = 4;
}

message SoundElem {
  string uuid = 1;
  string soundPath = 2;
  string sourceURL = 3;
  int64 dataSize = 4;
  int64 duration = 5;
  string soundType = 6;
}

message VideoElem {
  string videoPath = 1;
  string videoUUID = 2;
  string videoURL = 3;
  string videoType = 4;
  int64 videoSize = 5;
  int64 duration = 6;
  string snapshotPath = 7;
  string snapshotUUID = 8;
  int64 snapshotSize = 9;
  string snapshotURL = 10;
  int32 snapshotWidth = 11;
  int32 snapshotHeight = 12;
  string snapshotType = 13;
}

message FileElem {
  string filePath = 1;
  string uuid = 2;
  string sourceURL = 3;
  string fileName = 4;
  int64 fileSize = 5;
  string fileType = 6;
}

message MessageEntity {
  string type = 1;
  int32 offset = 2;
  int32 length = 3;
  string url = 4;
  string ex = 5;
}

message MergeElem {
  string title = 1;
  repeated string abstractList = 2;
  repeated IMMessage multiMessage = 3;
  repeated MessageEntity messageEntityList = 4;
}

message AtTextElem {
  string text = 1;
  repeated string atUserList = 2;
  repeated AtInfo atUsersInfo = 3;
  IMMessage quoteMessage = 4;
  bool isAtSelf = 5;
}

message FaceElem {
  int32 index = 1;
  string data = 2;
}

message LocationElem {
  string description = 1;
  double longitude = 2;
  double latitude = 3;
}

message CustomElem {
  string data = 1;
  string description = 2;
  string extension = 3;
}

message QuoteElem {
  string text = 1;
  IMMessage quoteMessage = 2;
  repeated MessageEntity messageEntityList = 3;
}

message NotificationElem {
  string detail = 1;
}

message AdvancedTextElem {
  string text = 1;
  repeated MessageEntity messageEntityList = 2;
}

message TypingElem {
  string msgTips = 1;
}

message StreamElem {
  string type = 1;
  string content = 2;
  repeated string packets = 3;
  bool end = 4;
}

message GroupHasReadInfo {
  repeated string hasReadUserIDList = 1;
  int32 hasReadCount = 2;
  int32 groupMemberCount = 3;
}

message UploadProgress {
  int64 total = 1;
  int64 save = 2;
  int64 current = 3;
  string uploadID = 4;
}

message AttachedInfoElem {
  GroupHasReadInfo groupHasReadInfo = 1;
  bool isPrivateChat = 2;
  int32 burnDuration = 3;
  int64 hasReadTime = 4;
  UploadProgress progress = 5;
}

message IMMessage {
  string clientMsgID = 1;
  string serverMsgID = 2;
  int64 createTime = 3;
  int64 sendTime = 4;
  common.SessionType sessionType = 5;
  string sendID = 6;
  string recvID = 7;
  common.MsgFrom msgFrom = 8;
  common.ContentType contentType = 9;
  common.Platform senderPlatformID = 10;
  string senderNickname = 11;
  string senderFaceURL = 12;
  string groupID = 13;
  int64 seq = 15;
  bool isRead = 16;
  common.MsgStatus status = 17;
  common.OfflinePushInfo offlinePush = 18;
  string ex = 20;
  string localEx = 21;
  oneof content {
    TextElem textElem = 23;
    CardElem cardElem = 24;
    PictureElem pictureElem = 25;
    SoundElem soundElem = 26;
    VideoElem videoElem = 27;
    FileElem fileElem = 28;
    MergeElem mergeElem = 29;
    AtTextElem atTextElem = 30;
    FaceElem faceElem = 31;
    LocationElem locationElem = 32;
    CustomElem customElem = 33;
    QuoteElem quoteElem = 34;
    NotificationElem notificationElem = 35;
    AdvancedTextElem advancedTextElem = 36;
    TypingElem typingElem = 37;
    StreamElem streamElem = 38;
  }
  AttachedInfoElem attachedInfoElem = 39;
}

// ############## notification ##############

// ############## user ################

message UserInfo {
  string userID = 1;
  string nickname = 2;
  string faceURL = 3;
  string ex = 4;
  int64 createTime = 5;
  int32 appMangerLevel = 6;
  int32 globalRecvMsgOpt = 7;
  string attached = 8;
}

// ############## relation ################

message FriendInfo {
  string ownerUserID    = 1;
  string friendUserID   = 2;
  string remark         = 3;
  int64 createTime     = 4;
  int32 addSource      = 5;
  string operatorUserID = 6;
  string nickname       = 7;
  string faceURL        = 8;
  string ex             = 9;
  string attachedInfo   = 10;
  bool isPinned       = 11;
}

message BlackInfo {
  string ownerUserID = 1;
  string blockUserID = 2;
  string nickname = 3;
  string faceURL = 4;
  int64 createTime = 5;
  int32 addSource = 6;
  string operatorUserID = 7;
  string ex = 8;
  string attached = 9;
}

message FriendRequestInfo {
  string fromUserID = 1;
  string fromNickname = 2;
  string fromFaceURL = 3;
  string toUserID = 4;
  string toNickname = 5;
  string toFaceURL = 6;
  int32 handleResult = 7;
  string reqMsg = 8;
  int64 createTime = 9;
  string handlerUserID = 10;
  string handleMsg = 11;
  int64 handleTime = 12;
  string ex = 13;
  string attached = 14;
}

// ############## group ################


enum GroupStatus {
  Default = 0;
  Dismissed = 2;
}

enum GroupFilter {
  All                   = 0;
  Owner                 = 1;
  Admin                 = 2;
  OrdinaryUsers         = 3;
  AdminAndOrdinaryUsers = 4;
  OwnerAndAdmin         = 5;
}

message GroupInfo {
  string groupID = 1;
  string groupName = 2;
  string notification = 3;
  string introduction = 4;
  string faceURL = 5;
  string ownerUserID = 6;
  int64 createTime = 7;
  int64 memberCount = 8;
  string ex = 9;
  GroupStatus status = 10;
  string creatorUserID = 11;
  int32 needVerification = 12;
  int32 lookMemberInfo = 13;
  int32 applyMemberFriend = 14;
  int64 notificationUpdateTime = 15;
  string notificationUserID = 16;
  string attachedInfo = 17;
}

message GroupMemberInfo {
  string groupID = 1;
  string userID = 2;
  string nickname = 3;
  string faceURL = 4;
  int32 roleLevel = 5;
  int64 joinTime = 6;
  int32 joinSource = 7;
  string inviterUserID = 8;
  int64 muteEndTime = 9;
  string operatorUserID = 10;
  string ex = 11;
  string attachedInfo = 12;
}

message GroupRequestInfo {
  string groupID = 1;
  string groupName = 2;
  string notification = 3;
  string introduction = 4;
  string groupFaceURL = 5;
  int64 createTime = 6;
  int32 status = 7;
  string creatorUserID = 8;
  int32 groupType = 9;
  string ownerUserID = 10;
  int32 memberCount = 11;
  string userID = 12;
  string nickname = 13;
  string userFaceURL = 14;
  int32 handleResult = 15;
  string reqMsg = 16;
  string handledMsg = 17;
  int64 reqTime = 18;
  string handleUserID = 19;
  int64 handledTime = 20;
  string ex = 21;
  string attachedInfo = 22;
  int32 joinSource = 23;
  string inviterUserID = 24;
}

// ############## conversation ################

message Conversation {
  string conversationID = 1;
  int32 conversationType = 2;
  string userID = 3;
  string groupID = 4;
  string showName = 5;
  string faceURL = 6;
  int32 recvMsgOpt = 7;
  int32 unreadCount = 8;
  int32 groupAtType = 9;
  string latestMsg = 10;
  int64 latestMsgSendTime = 11;
  string draftText = 12;
  int64 draftTextTime = 13;
  bool isPinned = 14;
  bool isPrivateChat = 15;
  int32 burnDuration = 16;
  string ex = 17;
  int64 msgDestructTime = 18;
  bool isMsgDestruct = 19;
}

